k8s/eze-testing/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: eze-testing
  namespace: eze-testing-dev
spec:
  ports:
    - name: grpc #Very Important for use GRPC!!!! 
      port: 50051
      protocol: TCP
      targetPort: 50051
  selector:
    app: eze-testing
  type: ClusterIP
